Agregado el contenido adicional del blog y nueva tipografia

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,12 @@
     <div id="container">
         <div id="post">
             <h1>Este es el titulo atractivo e interesante</h1>
-            <p>Este es el parrafo de inicio que muestra todo lo que queremos decir</p> 
+            <p>Este es el parrafo de inicio que muestra todo lo que queremos decir</p>
+            <p>
+               Los blogs son la mejor forma de compartir
+               informacion y tus ideas. Mucho mas que ir 
+               a conferencia o salir en youtube.
+            </p>
         </div>   
     </div>
 </body>
